[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/I-will-survive-_WillBass-Remix_-For-ENSTAPOCALYPSE.ogg" type="AudioStream" id=5]
[ext_resource path="res://art/Goku-Maldicion.wav" type="AudioStream" id=6]
[ext_resource path="res://MenuPausa.tscn" type="PackedScene" id=7]
[ext_resource path="res://Mobile.tscn" type="PackedScene" id=8]
[ext_resource path="res://art/estrat√≥sfera-1024x512.jpg" type="Texture" id=9]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 720, 1280, 0, 0, 0, 0, 0, 1280, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )
mob_scene = ExtResource( 3 )

[node name="Fondo" type="Sprite" parent="."]
self_modulate = Color( 0.266667, 0.215686, 0.215686, 1 )
position = Vector2( 361.58, 640.139 )
rotation = -1.5708
scale = Vector2( 1.24455, 1.40773 )
texture = ExtResource( 9 )

[node name="Player" parent="." instance=ExtResource( 1 )]
scale = Vector2( 1.2, 1.2 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 3.5

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 360, 640 )
__meta__ = {
"_edit_group_": true
}

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
__meta__ = {
"_edit_group_": true
}

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 5 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 4.0

[node name="MenuPausa" parent="." instance=ExtResource( 7 )]
visible = false

[node name="Mobile" parent="." instance=ExtResource( 8 )]

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="reiniciar" from="MenuPausa" to="." method="_reiniciar"]
[connection signal="use_move_vector" from="Mobile" to="Player" method="_on_Mobile_use_move_vector"]
